--- a/RecordLibraryWithFetch/Style.css
+++ b/RecordLibraryWithFetch/Style.css
@@ -5,6 +5,6 @@
 .card-body {
     background-color: black;
     color: white;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -1rem;
+    margin-right: -1rem;
 }
